--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@types/styled-components": "^5.1.16",
     "expo": "~43.0.2",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
@@ -31,7 +32,8 @@
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
